--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         body { margin: 0; padding:0;}
         canvas { display: block;}
     </style>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 
 <body>
     <div id="container"></div>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 
 
